RESOLVED FIXED69779
media/audio-data-url.html test broken on Lion
https://bugs.webkit.org/show_bug.cgi?id=69779
Summary media/audio-data-url.html test broken on Lion
Jer Noble
Reported 2011-10-10 13:36:55 PDT
media/audio-data-url.html test broken on Lion
Attachments
Patch (1.75 KB, patch)
2011-10-10 13:40 PDT, Jer Noble
no flags
Patch (1.79 KB, patch)
2011-10-10 15:30 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2011-10-10 13:40:35 PDT
Darin Adler
Comment 2 2011-10-10 14:16:26 PDT
Comment on attachment 110393 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=110393&action=review > Source/WebCore/platform/graphics/mac/MediaPlayerPrivateQTKit.mm:285 > + if (!willUseProxy && ![[cocoaURL scheme] isEqualTo:@"data"]) { We should not do a case-sensitive compare of a URL scheme. So instead of iEqualTo we need something that ignores case.
Jer Noble
Comment 3 2011-10-10 14:32:30 PDT
(In reply to comment #2) > (From update of attachment 110393 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=110393&action=review > > > Source/WebCore/platform/graphics/mac/MediaPlayerPrivateQTKit.mm:285 > > + if (!willUseProxy && ![[cocoaURL scheme] isEqualTo:@"data"]) { > > We should not do a case-sensitive compare of a URL scheme. So instead of iEqualTo we need something that ignores case. I'll change this to a case insensitive compare.
Jer Noble
Comment 4 2011-10-10 15:30:36 PDT
Eric Carlson
Comment 5 2011-10-10 17:44:32 PDT
Comment on attachment 110421 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=110421&action=review > Source/WebCore/platform/graphics/mac/MediaPlayerPrivateQTKit.mm:285 > + if (!willUseProxy && ![[cocoaURL scheme] compare:@"data" options:NSCaseInsensitiveSearch]) { Is there any reason to not use WebCore's protocolIs() or KURL's protocolIsData() instead?
Jer Noble
Comment 6 2012-02-07 15:46:45 PST
(In reply to comment #5) > (From update of attachment 110421 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=110421&action=review > > > Source/WebCore/platform/graphics/mac/MediaPlayerPrivateQTKit.mm:285 > > + if (!willUseProxy && ![[cocoaURL scheme] compare:@"data" options:NSCaseInsensitiveSearch]) { > > Is there any reason to not use WebCore's protocolIs() or KURL's protocolIsData() instead? Nope. Will do.
Jer Noble
Comment 7 2012-02-07 15:53:24 PST
Note You need to log in before you can comment on or make changes to this bug.