media/audio-data-url.html test broken on Lion https://bugs.webkit.org/show_bug.cgi?id=69779

Reviewed by Eric Carlson.

Do not use "OpenForPlayback" attribute on data:// urls, as CoreMedia/QuickTime X cannot
handle those URLs.

* platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
(WebCore::MediaPlayerPrivateQTKit::createQTMovie):

Canonical link: https://commits.webkit.org/94918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107002 268f45cc-cd09-0410-ab3c-d52691b4dbfc